objects/Student_detail__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>student details</relationshipLabel>
        <relationshipName>student_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_name__c</fullName>
        <label>Father name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roll_number__c</fullName>
        <displayFormat>s-{0000}</displayFormat>
        <label>Roll number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>canteen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>canteen</label>
        <referenceTo>canteen__c</referenceTo>
        <relationshipLabel>student details</relationshipLabel>
        <relationshipName>student_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email_alert__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <label>phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>student_name__c</fullName>
        <description>contains student full name</description>
        <label>student name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Student detail</label>
    <nameField>
        <label>Student detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>student details</pluralLabel>
    <recordTypes>
        <fullName>user1</fullName>
        <active>true</active>
        <label>user1</label>
    </recordTypes>
    <recordTypes>
        <fullName>user2</fullName>
        <active>true</active>
        <label>user2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>date_of_birth</fullName>
        <active>true</active>
        <description>date of birth of the student should be in between 1900-todays date</description>
        <errorConditionFormula>or(Date_of_birth__c  &lt;  DATE(1900,01,01),
 Date_of_birth__c  &gt;  TODAY() )</errorConditionFormula>
        <errorDisplayField>Date_of_birth__c</errorDisplayField>
        <errorMessage>date of birth should be in between 1900 jan 01 to present date</errorMessage>
    </validationRules>
</CustomObject>